@@ -1,117 +1,119 @@
 package com.cricri.constraints;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import com.cricri.model.Employee;
 import com.cricri.model.Shift;
-import com.cricri.model.ShiftType;
-import com.cricri.model.Week;
 import com.cricri.service.SchedulingContext;
-import com.google.ortools.Loader;
+import com.cricri.testutils.ConstraintTestBase;
+import com.cricri.testutils.SolverAssertions;
+import com.cricri.testutils.TestDataFactory;
 import com.google.ortools.sat.CpSolver;
-import com.google.ortools.sat.CpSolverStatus;
 
-class MinimumCoverageConstraintTest {
+/**
+ * Tests unitaires pour MinimumCoverageConstraint.
+ *
+ * Cette contrainte assure que chaque shift a le nombre minimum et maximum
+ * d'employés requis selon sa configuration.
+ */
+class MinimumCoverageConstraintTest extends ConstraintTestBase {
 
-  private List<Employee> employees;
-  private List<Shift> shifts;
-  private SchedulingContext context;
   private MinimumCoverageConstraint constraint;
 
-  @BeforeEach
-  void setUp() {
-    Loader.loadNativeLibraries();
-
-    // Employés de test
-    employees = Arrays.asList(
-        new Employee("E1", "Alice"),
-        new Employee("E2", "Bob"),
-        new Employee("E3", "Charlie"));
-
-    // Shifts de test
-    ShiftType normalShift = new ShiftType("NORMAL", 480, 960, 480, 45); // 8h-16h
-    Week week = Week.create(0);
-    shifts = Arrays.asList(
-        new Shift("Lundi-MATIN", week.getDay(0), normalShift, 1, 2), // min=1, max=2
-        new Shift("Lundi-SOIR", week.getDay(0), normalShift, 2, 3)); // min=2, max=3
-
-    // Contexte de test
-    context = new SchedulingContext(employees, shifts, new HashMap<>());
+  @Override
+  protected void setupSpecific() {
     constraint = new MinimumCoverageConstraint();
   }
 
   @Test
-  void testApplyConstraint() {
-    // Appliquer la contrainte
-    constraint.apply(context);
+  void testConstraintProperties() {
+    testConstraintProperties(constraint);
 
-    // Résoudre
-    CpSolver solver = new CpSolver();
-    CpSolverStatus status = solver.solve(context.getModel());
-
-    // Vérifier qu'une solution existe
-    assertTrue(status == CpSolverStatus.OPTIMAL || status == CpSolverStatus.FEASIBLE,
-        "Une solution doit exister");
-
-    // Vérifier les contraintes de couverture
-    for (int s = 0; s < shifts.size(); s++) {
-      Shift shift = shifts.get(s);
-      int assignedCount = 0;
-      
-      for (int e = 0; e < employees.size(); e++) {
-        if (solver.value(context.getAssignments()[e][s]) == 1) {
-          assignedCount++;
-        }
-      }
-
-      assertTrue(assignedCount >= shift.minEmployes(),
-          "Le shift " + shift.id() + " doit avoir au moins " + shift.minEmployes() + " employé(s)");
-      assertTrue(assignedCount <= shift.maxEmployes(),
-          "Le shift " + shift.id() + " ne doit pas avoir plus de " + shift.maxEmployes() + " employé(s)");
-      
-      // Vérifier la variable employeesPerShift
-      assertEquals(assignedCount, solver.value(context.getEmployeesPerShift()[s]),
-          "La variable employeesPerShift doit correspondre au nombre d'assignations");
-    }
-  }
-
-  @Test
-  void testConstraintName() {
     assertEquals("MinimumCoverage", constraint.getName());
+    assertEquals(ConstraintPriority.FUNDAMENTAL, constraint.getPriority());
   }
 
   @Test
-  void testConstraintPriority() {
-    assertEquals(-10, constraint.getPriority());
+  void testBasicMinimumCoverageConstraint() {
+    testConstraintWithStandardData(constraint);
+
+    // Vérifier que la couverture est respectée après résolution
+    CpSolver solver = SolverAssertions.solveAndAssertSolution(context);
+    SolverAssertions.assertAllShiftsCovered(solver, context.getAssignments(), shifts);
   }
 
   @Test
-  void testValidation() {
-    assertTrue(constraint.validate(context), "La validation doit réussir avec un contexte valide");
+  void testCoverageWithRangeRequirements() {
+    // Tester avec des shifts ayant des plages min-max
+    List<Shift> rangeShifts = List.of(
+        new Shift("Flexible-1", week1.getDay(0), TestDataFactory.NORMAL_SHIFT, 1, 2), // 1-2 employés
+        new Shift("Flexible-2", week1.getDay(1), TestDataFactory.NORMAL_SHIFT, 1, 3)  // 1-3 employés
+    );
+
+    SchedulingContext rangeContext = TestDataFactory.createContext(employees, rangeShifts);
+    constraint.apply(rangeContext);
+
+    CpSolver solver = SolverAssertions.solveAndAssertSolution(rangeContext);
+    SolverAssertions.assertAllShiftsCovered(solver, rangeContext.getAssignments(), rangeShifts);
   }
 
   @Test
-  void testInfeasibleCase() {
-    // Créer un cas impossible : 1 seul employé pour un shift qui en demande 2
-    List<Employee> oneEmployee = Arrays.asList(new Employee("E1", "Alice"));
-    List<Shift> impossibleShifts = Arrays.asList(
-        new Shift("Impossible", Week.create(0).getDay(0), 
-            new ShiftType("TEST", 480, 960, 480, 0), 2, 2)); // min=2, max=2
+  void testInfeasibleScenario() {
+    // Scénario impossible : 1 employé pour un shift qui en demande 2
+    List<Employee> oneEmployee = TestDataFactory.createEmployees(1);
+    List<Shift> impossibleShifts = List.of(
+        new Shift("Impossible", week1.getDay(0), TestDataFactory.NORMAL_SHIFT, 2, 2)
+    );
 
-    SchedulingContext impossibleContext = new SchedulingContext(
-        oneEmployee, impossibleShifts, new HashMap<>());
-    
-    constraint.apply(impossibleContext);
-    
-    CpSolver solver = new CpSolver();
-    CpSolverStatus status = solver.solve(impossibleContext.getModel());
-    
-    assertEquals(CpSolverStatus.INFEASIBLE, status,
-        "Le problème devrait être infaisable avec 1 employé pour un shift qui en demande 2");
+    SchedulingContext impossibleContext = TestDataFactory.createContext(oneEmployee, impossibleShifts);
+    testConstraintMakesScenarioInfeasible(constraint, impossibleContext,
+        "1 employé pour un shift qui demande 2 employés minimum");
+  }
+
+  @Test
+  void testMultipleShiftsWithDifferentRequirements() {
+    // Tester avec des shifts ayant des besoins variés
+    List<Employee> fiveEmployees = TestDataFactory.createEmployees(5);
+    List<Shift> variedShifts = List.of(
+        new Shift("Light-1", week1.getDay(0), TestDataFactory.NORMAL_SHIFT, 1, 1),
+        new Shift("Heavy-1", week1.getDay(1), TestDataFactory.NORMAL_SHIFT, 3, 3),
+        new Shift("Flexible-1", week1.getDay(2), TestDataFactory.NORMAL_SHIFT, 1, 2)
+    );
+
+    SchedulingContext variedContext = TestDataFactory.createContext(fiveEmployees, variedShifts);
+    constraint.apply(variedContext);
+
+    CpSolver solver = SolverAssertions.solveAndAssertSolution(variedContext);
+    SolverAssertions.assertAllShiftsCovered(solver, variedContext.getAssignments(), variedShifts);
+  }
+
+  @Test
+  void testConstraintWithZeroMaxEmployees() {
+    // Tester avec maxEmployees = 0 (shift optionnel)
+    List<Shift> optionalShifts = List.of(
+        new Shift("Optional", week1.getDay(0), TestDataFactory.NORMAL_SHIFT, 0, 0),
+        new Shift("Required", week1.getDay(1), TestDataFactory.NORMAL_SHIFT, 1, 1)
+    );
+
+    SchedulingContext optionalContext = TestDataFactory.createContext(employees, optionalShifts);
+    constraint.apply(optionalContext);
+
+    CpSolver solver = SolverAssertions.solveAndAssertSolution(optionalContext);
+
+    // Vérifier que le shift optionnel n'a aucun employé assigné
+    for (int e = 0; e < employees.size(); e++) {
+      assertEquals(0, solver.value(optionalContext.getAssignments()[e][0]),
+          "Shift optionnel ne devrait avoir aucun employé assigné");
+    }
+
+    // Vérifier que le shift requis a bien un employé
+    int requiredAssignments = 0;
+    for (int e = 0; e < employees.size(); e++) {
+      if (solver.value(optionalContext.getAssignments()[e][1]) == 1) {
+        requiredAssignments++;
+      }
+    }
+    assertEquals(1, requiredAssignments, "Shift requis doit avoir exactement 1 employé");
   }
 }
